<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	          android:id="@+id/activity_main_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#0099cc"
	android:orientation="vertical"
	android:gravity="center"
	tools:context="no.pxpdev.farmtofame.MainActivity"
	>

	<TextView
		android:id="@+id/total_money"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/moneyz"
		android:textSize="15pt"
		android:layout_marginBottom="12dp"
		/>


	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="20dp"
		>

		<ImageView
			android:id="@+id/farmer_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/farmer_icon"
			/>
		<TextView
			android:id="@+id/farmer_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/farmer_icon"
			android:layout_marginBottom="11dp"
			android:background="@drawable/animal_score"
			android:gravity="center"
			android:text="102"
			android:textColor="@android:color/white"
			/>

		<Button
			android:id="@+id/buy_farmer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/farmer_icon"
			android:layout_toEndOf="@+id/farmer_button"
			android:background="@drawable/buy_button"
			/>


		<TextView
			android:id="@+id/farmer_income"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/farmer_income"
			android:layout_alignParentTop="true"
			android:layout_alignStart="@+id/buy_farmer"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/clock"
			android:layout_above="@+id/farmer_button"
			android:layout_toEndOf="@+id/buy_farmer"
			/>

	</RelativeLayout>


	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="20dp"
		>

		<ImageView
			android:id="@+id/factory_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/factory_icon"
			/>
		<TextView
			android:id="@+id/factory_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/factory_icon"
			android:layout_marginBottom="11dp"
			android:background="@drawable/animal_score"
			android:gravity="center"
			android:text="102"
			android:textColor="@android:color/white"
			/>

		<Button
			android:id="@+id/buy_factory"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/factory_icon"
			android:layout_toEndOf="@+id/factory_button"
			android:background="@drawable/buy_button"
			/>


		<TextView
			android:id="@+id/factory_income"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/farmer_income"
			android:layout_alignParentTop="true"
			android:layout_alignStart="@+id/buy_factory"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/clock"
			android:layout_above="@+id/factory_button"
			android:layout_toEndOf="@+id/buy_factory"
			/>

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="20dp"
		>

		<ImageView
			android:id="@+id/land_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/land_icon"
			/>
		<TextView
			android:id="@+id/land_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/land_icon"
			android:layout_marginBottom="11dp"
			android:background="@drawable/animal_score"
			android:gravity="center"
			android:text="102"
			android:textColor="@android:color/white"
			/>

		<Button
			android:id="@+id/buy_land"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/land_icon"
			android:layout_toEndOf="@+id/land_button"
			android:background="@drawable/buy_button"
			/>


		<TextView
			android:id="@+id/land_income"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_alignStart="@+id/buy_land"
			android:background="@drawable/farmer_income"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@+id/land_button"
			android:layout_toEndOf="@+id/buy_land"
			android:background="@drawable/clock"
			/>

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="20dp"
		>

		<ImageView
			android:id="@+id/chicken_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/chicken_icon"
			/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/eggs_icon"
			android:layout_alignParentTop="true"
			android:layout_toStartOf="@+id/buy_chicken"
			android:layout_marginEnd="13dp"
			/>

		<TextView
			android:id="@+id/chicken_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/chicken_icon"
			android:layout_marginBottom="11dp"
			android:background="@drawable/animal_score"
			android:gravity="center"
			android:text="102"
			android:textColor="@android:color/white"
			/>

		<Button
			android:id="@+id/buy_chicken"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/chicken_icon"
			android:layout_toEndOf="@+id/chicken_button"
			android:background="@drawable/buy_button"
			/>


		<TextView
			android:id="@+id/chicken_income"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_alignStart="@+id/buy_chicken"
			android:background="@drawable/farmer_income"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@+id/chicken_button"
			android:layout_toEndOf="@+id/buy_chicken"
			android:background="@drawable/clock"
			/>

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="20dp"
		>

		<ImageView
			android:id="@+id/pig_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/pig_icon"
			/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/bacon_icon"
			android:layout_alignParentTop="true"
			android:layout_toStartOf="@+id/buy_pig"
			android:layout_marginEnd="13dp"
			/>

		<TextView
			android:id="@+id/pig_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/pig_icon"
			android:layout_marginBottom="11dp"
			android:background="@drawable/animal_score"
			android:gravity="center"
			android:text="102"
			android:textColor="@android:color/white"
			/>

		<Button
			android:id="@+id/buy_pig"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/pig_icon"
			android:layout_toEndOf="@+id/pig_button"
			android:background="@drawable/buy_button"
			/>


		<TextView
			android:id="@+id/pig_income"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_alignStart="@+id/buy_pig"
			android:background="@drawable/farmer_income"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@+id/pig_button"
			android:layout_toEndOf="@+id/buy_pig"
			android:background="@drawable/clock"
			/>

	</RelativeLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_horizontal"
		android:weightSum="12"
		>

		<Button
			android:id="@+id/cow_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="4"
			android:text="@string/cow"
			/>

		<TextView
			android:id="@+id/cow_money"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:gravity="center_horizontal"
			android:text="@string/dollars"
			/>

		<Button
			android:id="@+id/buy_cow"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="4"
			android:text="@string/buy_cow"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_horizontal"
		android:weightSum="12"
		>

		<Button
			android:id="@+id/bull_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="4"
			android:text="@string/bull"
			/>

		<TextView
			android:id="@+id/bull_money"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:gravity="center_horizontal"
			android:text="@string/dollars"
			/>

		<Button
			android:id="@+id/buy_bull"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="4"
			android:text="@string/buy_bull"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="start"
			>
			<TextView
				android:id="@+id/animals_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start"
				android:textSize="12sp"
				android:text="Animals "
				/>

			<TextView
				android:id="@+id/animals_counter_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start"
				android:textSize="12sp"
				android:text="       x"
				/>

			<TextView
				android:id="@+id/lands_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start"
				android:textSize="12sp"
				android:text="Lands "
				/>

			<TextView
				android:id="@+id/lands_counter_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start"
				android:textSize="12sp"
				android:text="     x"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center_horizontal"
			android:layout_marginLeft="30dp">
			<TextView
				android:id="@+id/eggs_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top|center_horizontal"
				android:textSize="12sp"
				android:text="Eggs "
				/>

			<TextView
				android:id="@+id/egg_counter_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
				android:text="    x"
				/>

			<TextView
				android:id="@+id/meat_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
				android:text="Meats "
				/>

			<TextView
				android:id="@+id/meat_counter_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
				android:text="    x"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center_horizontal"
			android:layout_marginLeft="30dp">
			<TextView
				android:id="@+id/wool_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top|center_horizontal"
				android:textSize="12sp"
				android:text="Wool "
				/>

			<TextView
				android:id="@+id/wool_counter_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
				android:text="    x"
				/>

			<TextView
				android:id="@+id/milk_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
				android:text="Milk "
				/>

			<TextView
				android:id="@+id/milk_counter_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
				android:text="    x"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center_horizontal"
			android:layout_marginLeft="30dp">
			<TextView
				android:id="@+id/beef_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top|center_horizontal"
				android:textSize="12sp"
				android:text="Beef "
				/>

			<TextView
				android:id="@+id/beef_counter_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
				android:text="        x"
				/>

			<TextView
				android:id="@+id/factory_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top|center_horizontal"
				android:textSize="12sp"
				android:text="Factories "
				/>

			<TextView
				android:id="@+id/factory_counter_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="12sp"
				android:text="        x"/>

		</LinearLayout>


	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	android:orientation="vertical">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>

			<Button
				android:id="@+id/sell_eggs_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Sell Eggs"
				/>

			<Button
				android:id="@+id/sell_meat_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Sell Meat"
				/>

		<Button
			android:id="@+id/sell_wool_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Sell Wool"
			/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<Button
				android:id="@+id/sell_milk_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Sell Milk"
				/>

			<Button
				android:id="@+id/sell_beef_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Sell Beef"
				/>

			<Button
				android:id="@+id/reset_game"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Reset Game"
				/>
		</LinearLayout>

	</LinearLayout>
</LinearLayout>